# sjos-cmake

./: .gitignore  CMakeLists.txt  README.md
kernel/: bochsrc  grub.cfg  main.c  modules.c  modules.h  multiboot.h  tty.c  tty.cpp  tty.h  version.h
kernel/arch/i386/: boot.asm  crti.asm  crtn.asm  elf.c  elf.h  flags.cmake  gdt.asm  gdt.c  gdt.h  ioports.asm  ioports.h  layout.ld
modules/: layout.ld  modules.cmake
modules/dummy/: dummy.c
